test/FAIL/assertcmd/to_many_arguments/03_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="to many arguments"
#-------

assert word 0x15 0x15 0x15